<resources>
    <string name="app_name">Story App</string>
    <string name="name">name</string>
    <string name="detail_description">This is the story</string>
    <string name="pass_error">Password should be at least 8 characters</string>
    <string name="enter_pass">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="email_error">Email is invalid</string>
    <string name="submit">Submit</string>
    <string name="fill_first">Fill all First</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="doesn_t_have_an_account_yet">Doesn\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_story">Add Story</string>
    <string name="there_s_no_story">There\'s no story!</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="log_out">log out</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="story">Story</string>
    <string name="no_data">No Data</string>
    <string name="story_uploaded">Story uploaded successfully!</string>
    <string name="no_permission">Did not get permission</string>
    <string name="try_again">There\'s something wrong, please try again!</string>
    <string name="required_desc">Please give a description</string>
    <string name="required_pic">Please put a picture!</string>
    <string name="failed_camera">Failed to showed camera</string>
    <string name="failed_picture">Failed to take picture</string>
    <string name="welcome">Welcome</string>
    <string name="please_login">Please Login!</string>
    <string name="list_updated">List updated!</string>
    <string name="logout">You are log out!</string>
    <string name="manually_login">Register Success. Please login manually!</string>
    <string name="detail_story">Detail Story</string>
    <string name="language">Language</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="switch_camera">switch camera</string>
    <string name="photo_description">photo description</string>
    <string name="icon_login">icon login</string>
    <string name="icon_register">icon register</string>
    <string name="app_logo">app logo</string>
    <string name="photo_story">Photo Story</string>
    <string name="refresh">refresh</string>
    <string name="widget_photo">widget photo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">maps</string>
    <string name="location">location</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="story_map">Story Map</string>
    <string name="save_my_current_location">Save my current location</string>

</resources>