<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="28dp"
    android:paddingHorizontal="16dp"
    tools:context=".ui.add.AddStoryActivity">


    <TextView
        android:id="@+id/tv_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_story"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/blue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <ImageView
        android:id="@+id/iv_img_desc"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/add_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_add_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/required_pic" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sc_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_my_current_location"
        app:layout_constraintStart_toStartOf="@id/iv_img_desc"
        app:layout_constraintTop_toBottomOf="@id/iv_img_desc"
        app:layout_constraintEnd_toEndOf="@id/iv_img_desc"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.47"
        android:text="@string/camera"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue2"
        android:textColor="@color/blue1"
        app:layout_constraintTop_toBottomOf="@id/sc_location"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.47"
        android:text="@string/gallery"
        android:backgroundTint="@color/blue2"
        android:textColor="@color/blue1"
        app:layout_constraintTop_toTopOf="@id/btn_camera"
        app:layout_constraintBottom_toBottomOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_camera">
        <com.azalia.submission1_storyapp.ui.custom.CustomEditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.azalia.submission1_storyapp.ui.custom.CustomButton
        android:id="@+id/btn_detail_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tf_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>