<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="44dp"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/img_login"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icon_login" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="60sp"
        android:textStyle="bold"
        android:transitionName="login"
        android:textColor="@color/blue1"
        app:layout_constraintTop_toBottomOf="@id/img_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">
        
        <com.azalia.submission1_storyapp.ui.custom.CustomEditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_pass_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:transitionName="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_email_login">

        <com.azalia.submission1_storyapp.ui.custom.CustomEditText
            android:id="@+id/et_pass_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.azalia.submission1_storyapp.ui.custom.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:transitionName="submit"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tf_pass_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/doesn_t_have_an_account_yet"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/blue1"
        android:background="#00FF0000"
        android:transitionName="register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register"/>
</androidx.constraintlayout.widget.ConstraintLayout>